--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
             justify-content: center;
             align-items: center;
             background: url('top-view-chalk-board.jpg');
+            background-repeat: no-repeat;
             background-size: 100%;
             font-family: "SuperFunky";
             font-weight: 400;
