--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             align-items: center;
             background: url('top-view-chalk-board.jpg');
             background-repeat: no-repeat;
-            background-size: 100%;
+            background-size: cover;
             font-family: "SuperFunky";
             font-weight: 400;
             font-style: normal;
