--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         }
         body {
             height: 100vh;
+            width: 100vw;
             margin: 0;
             display: flex;
             justify-content: center;
@@ -21,6 +22,7 @@
             background: url('top-view-chalk-board.jpg');
             background-repeat: no-repeat;
             background-size: cover;
+            background-position: center;
             font-family: "SuperFunky";
             font-weight: 400;
             font-style: normal;
